2025nov30/5-route.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.man_up.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "Public"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public-us-east-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public-us-east-1b.id
  route_table_id = aws_route_table.public.id
  }

  resource "aws_route_table_association" "c" {
  subnet_id      = aws_subnet.public-us-east-1c.id
  route_table_id = aws_route_table.public.id
  }

# Private Route Table 

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.man_up.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.man_up.id
  }

  tags = {
    Name = "private"
  }
}

 resource "aws_route_table_association" "private-a" {
  subnet_id      = aws_subnet.private-us-east-1a.id
  route_table_id = aws_route_table.private.id
  }

resource "aws_route_table_association" "private-b" {
  subnet_id      = aws_subnet.private-us-east-1b.id
  route_table_id = aws_route_table.private.id
  }

resource "aws_route_table_association" "private-c" {
  subnet_id      = aws_subnet.private-us-east-1c.id
  route_table_id = aws_route_table.private.id
  }
